--- a/scripts-and-styles/main.css
+++ b/scripts-and-styles/main.css
@@ -108,3 +108,13 @@
       bottom: -4px;
         background-image: -webkit-linear-gradient(right, transparent 0%, rgba(0,0,0,.4) 100%);
     }
+    #content {
+      font-family: 'Squada One', cursive;
+      display: block;
+      padding: 2px 10px;
+      color: #333;
+      font-size: 55px;
+      text-align: relative;
+      text-decoration: none;
+      position: relative;
+    } 
